--- a/deckhand-poc-ascrd/airship/crds/PromenadeHostSystem.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadeHostSystem.yaml
@@ -195,13 +195,13 @@ spec:
                     # $ref: '#/definitions/apt_source_line'
                     type: string
         
-              required:
-                - required
+              #JEB required:
+              #JEB   - required
               # additionalProperties: false
         
-          required:
-            - images
-            - packages
+          #JEB required:
+          #JEB   - images
+          #JEB   - packages
           # additionalProperties: false
 status:
   acceptedNames:
