--- a/deckhand-poc-ascrd/airship/crds/ArmadaManifest.yaml
+++ b/deckhand-poc-ascrd/airship/crds/ArmadaManifest.yaml
@@ -1,14 +1,25 @@
----
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: armadamanifests.armada.airshipit.org
+  creationTimestamp: null
   labels:
-    application: armada
+    controller-tools.k8s.io: "1.0"
+  name: armadamanifests.armada.airshipit.org
 spec:
   additionalPrinterColumns:
+  - JSONPath: .status.actual_state
+    description: State
+    name: State
+    type: string
+  - JSONPath: .spec.target_state
+    description: Target State
+    name: Target State
+    type: string
+  - JSONPath: .status.satisfied
+    description: Satisfied
+    name: Satisfied
+    type: boolean
   group: armada.airshipit.org
-  version: v1alpha1
   names:
     kind: ArmadaManifest
     plural: armadamanifests
@@ -33,12 +44,66 @@ spec:
         metadata:
           type: object
         spec:
-          type: 'object'
-          additionalProperties: true
+          type: object
+          properties:
+            release_prefix:
+              type: string
+            chart_groups:
+              type: array
+              items:
+                type: string
+            revisionHistoryLimit:
+              description: revisionHistoryLimit is the maximum number of revisions
+                that will be maintained in the ArmadaManifest's revision history.
+                The revision history consists of all revisions not represented by
+                a currently applied ArmadaManifest version. The default value is 10.
+              format: int32
+              type: integer
+          required:
+            - chart_groups
+            - release_prefix
+        status:
+          properties:
+            conditions:
+              description: 'List of conditions and states related to the resource.
+                JEB: Feature kind of overlap with event recorder'
+              items:
+                properties:
+                  lastTransitionTime:
+                    format: date-time
+                    type: string
+                  message:
+                    type: string
+                  reason:
+                    type: string
+                  resourceName:
+                    type: string
+                  resourceVersion:
+                    format: int32
+                    type: integer
+                  status:
+                    type: string
+                  type:
+                    type: string
+                required:
+                - type
+                - status
+                type: object
+              type: array
+            reason:
+              description: Reason indicates the reason for any related failures.
+              type: string
+            satisfied:
+              description: Satisfied indicates if the release's ActualState satisfies
+                its target state
+              type: boolean
+          required:
+          - satisfied
+          type: object
+  version: v1alpha1
 status:
   acceptedNames:
     kind: ""
     plural: ""
   conditions: []
   storedVersions: []
-...
