--- a/deckhand-poc-ascrd/airship/crds/PromenadeKubelet.yaml
+++ b/deckhand-poc-ascrd/airship/crds/PromenadeKubelet.yaml
@@ -53,8 +53,8 @@ spec:
               type: array
               items:
                 type: string
-          required:
-            - images
+          #JEB required:
+          #JEB   - images
           # additionalProperties: false
 status:
   acceptedNames:
