--- a/deckhand-poc-ascrd/airship/kustomization.yaml
+++ b/deckhand-poc-ascrd/airship/kustomization.yaml
@@ -13,42 +13,40 @@ commonLabels:
   deckhand-poc-label: airship
 
 crds:
-# - crds/ArmadaChartGroup.yaml
-# - crds/ArmadaChart.yaml
-# - crds/ArmadaManifest.yaml
-# - crds/DeckhandCertificateAuthorityKey.yaml
-# - crds/DeckhandCertificateAuthority.yaml
-# - crds/DeckhandCertificateKey.yaml
-# - crds/DeckhandCertificate.yaml
-# - crds/DeckhandPassphrase.yaml
-# - crds/DeckhandPrivateKey.yaml
-# - crds/DeckhandPublicKey.yaml
-# - crds/DrydockBaremetalNode.yaml
-# - crds/DrydockBootAction.yaml
-# - crds/DrydockHardwareProfile.yaml
-# - crds/DrydockHostProfile.yaml
-# - crds/DrydockNetworkLink.yaml
-# - crds/DrydockNetwork.yaml
-# - crds/DrydockRack.yaml
-# - crds/DrydockRegion.yaml
-# - crds/PeglegAccountCatalogue.yaml
-# - crds/PeglegAppArmorProfile.yaml
-# - crds/PeglegCommonAddresses.yaml
-# - crds/PeglegCommonSoftwareConfig.yaml
-# - crds/PeglegEndpointCatalogue.yaml
-# - crds/PeglegScript.yaml
-# - crds/PeglegSeccompProfile.yaml
-# - crds/PeglegSiteDefinition.yaml
-# - crds/PeglegSoftwareVersions.yaml
-# - crds/PromenadeDocker.yaml
-# - crds/PromenadeGenesis.yaml
-# - crds/PromenadeHostSystem.yaml
-# - crds/PromenadeKubelet.yaml
-# - crds/PromenadeKubernetesNetwork.yaml
-# - crds/PromenadeKubernetesNode.yaml
-# - crds/PromenadePKICatalog.yaml
-# - crds/ShipyardDeploymentConfiguration.yaml
-# - crds/ShipyardDeploymentStrategy.yaml
+- kustomizeconfig/ArmadaChartGroup.json
+- kustomizeconfig/ArmadaChart.json
+- kustomizeconfig/ArmadaManifest.json
+- kustomizeconfig/DeckhandCertificateAuthorityKey.json
+- kustomizeconfig/DeckhandCertificateAuthority.json
+- kustomizeconfig/DeckhandCertificateKey.json
+- kustomizeconfig/DeckhandCertificate.json
+- kustomizeconfig/DeckhandPassphrase.json
+- kustomizeconfig/DeckhandPrivateKey.json
+- kustomizeconfig/DeckhandPublicKey.json
+- kustomizeconfig/DrydockBaremetalNode.json
+- kustomizeconfig/DrydockBootAction.json
+- kustomizeconfig/DrydockHardwareProfile.json
+- kustomizeconfig/DrydockHostProfile.json
+- kustomizeconfig/DrydockNetworkLink.json
+- kustomizeconfig/DrydockNetwork.json
+- kustomizeconfig/DrydockRegion.json
+- kustomizeconfig/PeglegAccountCatalogue.json
+- kustomizeconfig/PeglegAppArmorProfile.json
+- kustomizeconfig/PeglegCommonAddresses.json
+- kustomizeconfig/PeglegCommonSoftwareConfig.json
+- kustomizeconfig/PeglegEndpointCatalogue.json
+- kustomizeconfig/PeglegScript.json
+- kustomizeconfig/PeglegSeccompProfile.json
+- kustomizeconfig/PeglegSiteDefinition.json
+- kustomizeconfig/PeglegSoftwareVersions.json
+- kustomizeconfig/PromenadeDocker.json
+- kustomizeconfig/PromenadeGenesis.json
+- kustomizeconfig/PromenadeHostSystem.json
+- kustomizeconfig/PromenadeKubelet.json
+- kustomizeconfig/PromenadeKubernetesNetwork.json
+- kustomizeconfig/PromenadePKICatalog.json
+- kustomizeconfig/ShipyardDeploymentConfiguration.json
+- kustomizeconfig/ShipyardDeploymentStrategy.json
 
 configurations:
 - kustomizeconfig/ArmadaChartGroup.yaml
@@ -58,7 +56,6 @@ configurations:
 - kustomizeconfig/DeckhandCertificateAuthority.yaml
 - kustomizeconfig/DeckhandCertificateKey.yaml
 - kustomizeconfig/DeckhandCertificate.yaml
-- kustomizeconfig/DeckhandLayeringPolicy.yaml
 - kustomizeconfig/DeckhandPassphrase.yaml
 - kustomizeconfig/DeckhandPrivateKey.yaml
 - kustomizeconfig/DeckhandPublicKey.yaml
