Consolidate CRD kustomizations into base

--- a/deckhand-poc-ascrd/base/kustomizeconfig/ArmadaManifest.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/ArmadaManifest.yaml
@@ -1,3 +1,9 @@
+nameReference:
+- kind: ArmadaChartGroup
+  fieldSpecs:
+  - path: spec/chartGroupRef/name
+    kind: ArmadaManifest
+
 varReference:
-- path: spec
+- path: spec/release_prefix
   kind: ArmadaManifest
