--- a/deckhand-poc-ascrd/keystone/kustomization.yaml
+++ b/deckhand-poc-ascrd/keystone/kustomization.yaml
@@ -2,6 +2,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+bases:
+- ../base
+
 resources:
 - global-manifest.yaml
 - keystone.yaml
@@ -17,8 +20,3 @@ namespace: ucp
 
 commonLabels:
   ucp-label: common
-
-vars:
-
-configurations:
-- kustomizeconfig/armadamanifest.yaml
