--- a/deckhand-poc-ascrd/keystone/ucp-keystone-group.yaml
+++ b/deckhand-poc-ascrd/keystone/ucp-keystone-group.yaml
@@ -5,7 +5,7 @@ metadata:
   name: keystone
   labels:
     name: chartgroup-keystone-global
-data:
+spec:
   description: UCP Keystone
   chart_group:
     - keystone
