--- a/deckhand-poc-ascrd/airship/airship.yaml
+++ b/deckhand-poc-ascrd/airship/airship.yaml
@@ -3235,12 +3235,33 @@ spec:
 apiVersion: armada.airshipit.org/v1alpha1
 kind: ArmadaChart
 metadata:
+  layeringDefinition:
+    abstract: false
+    layer: global
+  name: kubernetes-calico-etcd-htk
+  substitutions:
+  - dest:
+      path: .source
+    src:
+      kind: PeglegSoftwareVersions
+      name: software-versions
+      path: .charts.kubernetes.calico.etcd-htk
+spec:
+  chart_name: kubernetes-calico-etcd-htk
+  dependencies: []
+  namespace: kubernetes-calico-etcd-htk
+  release: kubernetes-calico-etcd-htk
+  values: {}
+---
+apiVersion: armada.airshipit.org/v1alpha1
+kind: ArmadaChart
+metadata:
   labels:
     name: kubernetes-calico-etcd-global
   layeringDefinition:
     abstract: true
     layer: global
-  name: kubernetes-calico-etcd-global
+  name: kubernetes-calico-etcd
   substitutions:
   - dest:
       path: .source
@@ -3332,132 +3353,6 @@ spec:
     labels:
       release_group: airship-kubernetes-calico-etcd
     timeout: 600
----
-apiVersion: armada.airshipit.org/v1alpha1
-kind: ArmadaChart
-metadata:
-  layeringDefinition:
-    abstract: false
-    layer: global
-  name: kubernetes-calico-etcd-htk
-  substitutions:
-  - dest:
-      path: .source
-    src:
-      kind: PeglegSoftwareVersions
-      name: software-versions
-      path: .charts.kubernetes.calico.etcd-htk
-spec:
-  chart_name: kubernetes-calico-etcd-htk
-  dependencies: []
-  namespace: kubernetes-calico-etcd-htk
-  release: kubernetes-calico-etcd-htk
-  values: {}
----
-apiVersion: armada.airshipit.org/v1alpha1
-kind: ArmadaChart
-metadata:
-  layeringDefinition:
-    abstract: false
-    actions:
-    - method: merge
-      path: .
-    layer: site
-    parentSelector:
-      name: kubernetes-calico-etcd-global
-  name: kubernetes-calico-etcd
-  substitutions:
-  - dest:
-      path: .values.nodes[0].name
-    src:
-      kind: PeglegCommonAddresses
-      name: common-addresses
-      path: .genesis.hostname
-  - dest:
-      path: .values.nodes[1].name
-    src:
-      kind: PeglegCommonAddresses
-      name: common-addresses
-      path: .masters[0].hostname
-  - dest:
-      path: .values.nodes[2].name
-    src:
-      kind: PeglegCommonAddresses
-      name: common-addresses
-      path: .masters[1].hostname
-  - dest:
-      path: .values.nodes[0].tls.client.cert
-    src:
-      kind: DeckhandCertificate
-      name: calico-etcd-airsloop-control-1
-      path: .
-  - dest:
-      path: .values.nodes[0].tls.client.key
-    src:
-      kind: DeckhandCertificateKey
-      name: calico-etcd-airsloop-control-1
-      path: .
-  - dest:
-      path: .values.nodes[0].tls.peer.cert
-    src:
-      kind: DeckhandCertificate
-      name: calico-etcd-airsloop-control-1-peer
-      path: .
-  - dest:
-      path: .values.nodes[0].tls.peer.key
-    src:
-      kind: DeckhandCertificateKey
-      name: calico-etcd-airsloop-control-1-peer
-      path: .
-  - dest:
-      path: .values.nodes[1].tls.client.cert
-    src:
-      kind: DeckhandCertificate
-      name: calico-etcd-airsloop-control-2
-      path: .
-  - dest:
-      path: .values.nodes[1].tls.client.key
-    src:
-      kind: DeckhandCertificateKey
-      name: calico-etcd-airsloop-control-2
-      path: .
-  - dest:
-      path: .values.nodes[1].tls.peer.cert
-    src:
-      kind: DeckhandCertificate
-      name: calico-etcd-airsloop-control-2-peer
-      path: .
-  - dest:
-      path: .values.nodes[1].tls.peer.key
-    src:
-      kind: DeckhandCertificateKey
-      name: calico-etcd-airsloop-control-2-peer
-      path: .
-  - dest:
-      path: .values.nodes[2].tls.client.cert
-    src:
-      kind: DeckhandCertificate
-      name: calico-etcd-airsloop-control-3
-      path: .
-  - dest:
-      path: .values.nodes[2].tls.client.key
-    src:
-      kind: DeckhandCertificateKey
-      name: calico-etcd-airsloop-control-3
-      path: .
-  - dest:
-      path: .values.nodes[2].tls.peer.cert
-    src:
-      kind: DeckhandCertificate
-      name: calico-etcd-airsloop-control-3-peer
-      path: .
-  - dest:
-      path: .values.nodes[2].tls.peer.key
-    src:
-      kind: DeckhandCertificateKey
-      name: calico-etcd-airsloop-control-3-peer
-      path: .
-spec: {}
 ---
 apiVersion: armada.airshipit.org/v1alpha1
 kind: ArmadaChart
@@ -3721,12 +3616,33 @@ spec:
 apiVersion: armada.airshipit.org/v1alpha1
 kind: ArmadaChart
 metadata:
+  layeringDefinition:
+    abstract: false
+    layer: global
+  name: kubernetes-etcd-htk
+  substitutions:
+  - dest:
+      path: .source
+    src:
+      kind: PeglegSoftwareVersions
+      name: software-versions
+      path: .charts.kubernetes.etcd-htk
+spec:
+  chart_name: kubernetes-etcd-htk
+  dependencies: []
+  namespace: kubernetes-etcd-htk
+  release: kubernetes-etcd-htk
+  values: {}
+---
+apiVersion: armada.airshipit.org/v1alpha1
+kind: ArmadaChart
+metadata:
   labels:
     name: kubernetes-etcd-global
   layeringDefinition:
     abstract: true
     layer: global
-  name: kubernetes-etcd-global
+  name: kubernetes-etcd
   substitutions:
   - dest:
       path: .source
@@ -3814,132 +3730,6 @@ spec:
     labels:
       release_group: airship-kubernetes-etcd
     timeout: 600
----
-apiVersion: armada.airshipit.org/v1alpha1
-kind: ArmadaChart
-metadata:
-  layeringDefinition:
-    abstract: false
-    layer: global
-  name: kubernetes-etcd-htk
-  substitutions:
-  - dest:
-      path: .source
-    src:
-      kind: PeglegSoftwareVersions
-      name: software-versions
-      path: .charts.kubernetes.etcd-htk
-spec:
-  chart_name: kubernetes-etcd-htk
-  dependencies: []
-  namespace: kubernetes-etcd-htk
-  release: kubernetes-etcd-htk
-  values: {}
----
-apiVersion: armada.airshipit.org/v1alpha1
-kind: ArmadaChart
-metadata:
-  layeringDefinition:
-    abstract: false
-    actions:
-    - method: merge
-      path: .
-    layer: site
-    parentSelector:
-      name: kubernetes-etcd-global
-  name: kubernetes-etcd
-  substitutions:
-  - dest:
-      path: .values.nodes[0].name
-    src:
-      kind: PeglegCommonAddresses
-      name: common-addresses
-      path: .genesis.hostname
-  - dest:
-      path: .values.nodes[1].name
-    src:
-      kind: PeglegCommonAddresses
-      name: common-addresses
-      path: .masters[0].hostname
-  - dest:
-      path: .values.nodes[2].name
-    src:
-      kind: PeglegCommonAddresses
-      name: common-addresses
-      path: .masters[1].hostname
-  - dest:
-      path: .values.nodes[0].tls.client.cert
-    src:
-      kind: DeckhandCertificate
-      name: kubernetes-etcd-genesis
-      path: .
-  - dest:
-      path: .values.nodes[0].tls.client.key
-    src:
-      kind: DeckhandCertificateKey
-      name: kubernetes-etcd-genesis
-      path: .
-  - dest:
-      path: .values.nodes[0].tls.peer.cert
-    src:
-      kind: DeckhandCertificate
-      name: kubernetes-etcd-genesis-peer
-      path: .
-  - dest:
-      path: .values.nodes[0].tls.peer.key
-    src:
-      kind: DeckhandCertificateKey
-      name: kubernetes-etcd-genesis-peer
-      path: .
-  - dest:
-      path: .values.nodes[1].tls.client.cert
-    src:
-      kind: DeckhandCertificate
-      name: kubernetes-etcd-airsloop-control-2
-      path: .
-  - dest:
-      path: .values.nodes[1].tls.client.key
-    src:
-      kind: DeckhandCertificateKey
-      name: kubernetes-etcd-airsloop-control-2
-      path: .
-  - dest:
-      path: .values.nodes[1].tls.peer.cert
-    src:
-      kind: DeckhandCertificate
-      name: kubernetes-etcd-airsloop-control-2-peer
-      path: .
-  - dest:
-      path: .values.nodes[1].tls.peer.key
-    src:
-      kind: DeckhandCertificateKey
-      name: kubernetes-etcd-airsloop-control-2-peer
-      path: .
-  - dest:
-      path: .values.nodes[2].tls.client.cert
-    src:
-      kind: DeckhandCertificate
-      name: kubernetes-etcd-airsloop-control-3
-      path: .
-  - dest:
-      path: .values.nodes[2].tls.client.key
-    src:
-      kind: DeckhandCertificateKey
-      name: kubernetes-etcd-airsloop-control-3
-      path: .
-  - dest:
-      path: .values.nodes[2].tls.peer.cert
-    src:
-      kind: DeckhandCertificate
-      name: kubernetes-etcd-airsloop-control-3-peer
-      path: .
-  - dest:
-      path: .values.nodes[2].tls.peer.key
-    src:
-      kind: DeckhandCertificateKey
-      name: kubernetes-etcd-airsloop-control-3-peer
-      path: $
-spec: {}
 ---
 apiVersion: armada.airshipit.org/v1alpha1
 kind: ArmadaChart
@@ -8194,7 +7984,7 @@ metadata:
   layeringDefinition:
     abstract: true
     layer: global
-  name: tenant-ceph-client-global
+  name: tenant-ceph-client
   substitutions:
   - dest:
       path: .source
@@ -8372,26 +8162,6 @@ spec:
     labels:
       release_group: airship-tenant-ceph-client
     timeout: 900
----
-apiVersion: armada.airshipit.org/v1alpha1
-kind: ArmadaChart
-metadata:
-  layeringDefinition:
-    abstract: false
-    actions:
-    - method: merge
-      path: .
-    layer: site
-    parentSelector:
-      name: tenant-ceph-client-type
-  name: tenant-ceph-client
-  replacement: true
-spec:
-  values:
-    conf:
-      pool:
-        target:
-          osd: 1
 ---
 apiVersion: armada.airshipit.org/v1alpha1
 kind: ArmadaChart
@@ -9254,7 +9024,7 @@ metadata:
   layeringDefinition:
     abstract: true
     layer: global
-  name: ucp-ceph-client-update-global
+  name: ucp-ceph-client-update
   substitutions:
   - dest:
       path: .source
@@ -10138,12 +9908,33 @@ spec:
 apiVersion: armada.airshipit.org/v1alpha1
 kind: ArmadaChart
 metadata:
+  layeringDefinition:
+    abstract: false
+    layer: global
+  name: ucp-divingbell-htk
+  substitutions:
+  - dest:
+      path: .source
+    src:
+      kind: PeglegSoftwareVersions
+      name: software-versions
+      path: .charts.ucp.divingbell-htk
+spec:
+  chart_name: ucp-divingbell-htk
+  dependencies: []
+  namespace: ucp-divingbell-htk
+  release: ucp-divingbell-htk
+  values: {}
+---
+apiVersion: armada.airshipit.org/v1alpha1
+kind: ArmadaChart
+metadata:
   labels:
     name: ucp-divingbell-global
   layeringDefinition:
     abstract: true
     layer: global
-  name: ucp-divingbell-global
+  name: ucp-divingbell
   substitutions:
   - dest:
       path: .source
@@ -10195,73 +9986,6 @@ spec:
     labels:
       release_group: airship-ucp-divingbell
     timeout: 300
----
-apiVersion: armada.airshipit.org/v1alpha1
-kind: ArmadaChart
-metadata:
-  layeringDefinition:
-    abstract: false
-    layer: global
-  name: ucp-divingbell-htk
-  substitutions:
-  - dest:
-      path: .source
-    src:
-      kind: PeglegSoftwareVersions
-      name: software-versions
-      path: .charts.ucp.divingbell-htk
-spec:
-  chart_name: ucp-divingbell-htk
-  dependencies: []
-  namespace: ucp-divingbell-htk
-  release: ucp-divingbell-htk
-  values: {}
----
-apiVersion: armada.airshipit.org/v1alpha1
-kind: ArmadaChart
-metadata:
-  labels:
-    name: ucp-divingbell-site
-  layeringDefinition:
-    abstract: false
-    actions:
-    - method: merge
-      path: .
-    layer: site
-    parentSelector:
-      name: ucp-divingbell-global
-  name: ucp-divingbell
-  substitutions:
-  - dest:
-      path: .values.conf.uamlite.users[0].user_sshkeys[0]
-    src:
-      kind: DeckhandPublicKey
-      name: airsloop-ssh-public-key
-      path: .
-  - dest:
-      path: .values.conf.uamlite.users[0].user_crypt_passwd
-    src:
-      kind: DeckhandPassphrase
-      name: airsloop-crypt-password
-      path: .
-spec:
-  values:
-    conf:
-      uamlite:
-        users:
-        - user_name: ubuntu
-          user_sshkeys: []
-          user_sudo: true
-    manifests:
-      daemonset_apparmor: false
-      daemonset_apt: true
-      daemonset_ethtool: false
-      daemonset_exec: true
-      daemonset_limits: false
-      daemonset_mounts: false
-      daemonset_perm: false
-      daemonset_sysctl: false
-      daemonset_uamlite: true
 ---
 apiVersion: armada.airshipit.org/v1alpha1
 kind: ArmadaChart
@@ -15790,7 +15514,7 @@ metadata:
   layeringDefinition:
     abstract: true
     layer: global
-  name: cp-global
+  name: cp
   substitutions:
   - dest:
       path: .oob.credential
@@ -15902,7 +15626,7 @@ metadata:
   layeringDefinition:
     abstract: true
     layer: global
-  name: dp-global
+  name: dp
   substitutions:
   - dest:
       path: .oob.credential
@@ -19451,7 +19175,7 @@ metadata:
   layeringDefinition:
     abstract: false
     layer: global
-  name: docker-global
+  name: docker
 spec:
   config:
     live-restore: true
@@ -19465,7 +19189,7 @@ metadata:
   layeringDefinition:
     abstract: true
     layer: global
-  name: genesis-global
+  name: genesis
   substitutions:
   - dest:
       path: .images.armada
@@ -19570,49 +19294,6 @@ spec:
     - ucp-control-plane=enabled
     - maas-control-plane=enabled
     - node-exporter=enabled
----
-apiVersion: promenade.airshipit.org/v1alpha1
-kind: PromenadeGenesis
-metadata:
-  layeringDefinition:
-    abstract: false
-    actions:
-    - method: merge
-      path: .
-    layer: site
-    parentSelector:
-      name: genesis-global
-  name: genesis-site
-spec:
-  labels:
-    dynamic:
-    - beta.kubernetes.io/fluentd-ds-ready=true
-    - calico-etcd=enabled
-    - ceph-mds=enabled
-    - ceph-mon=enabled
-    - ceph-osd=enabled
-    - ceph-rgw=enabled
-    - ceph-mgr=enabled
-    - ceph-bootstrap=enabled
-    - tenant-ceph-control-plane=enabled
-    - tenant-ceph-mon=enabled
-    - tenant-ceph-rgw=enabled
-    - tenant-ceph-mgr=enabled
-    - kube-dns=enabled
-    - kube-ingress=enabled
-    - kubernetes-apiserver=enabled
-    - kubernetes-controller-manager=enabled
-    - kubernetes-etcd=enabled
-    - kubernetes-scheduler=enabled
-    - promenade-genesis=enabled
-    - ucp-control-plane=enabled
-    - maas-control-plane=enabled
-    - ceph-osd-bootstrap=enabled
-    - openstack-control-plane=enabled
-    - openvswitch=enabled
-    - openstack-l3-agent=enabled
-    - node-exporter=enabled
-    - fluentd=enabled
 ---
 apiVersion: promenade.airshipit.org/v1alpha1
 kind: PromenadeHostSystem
